projects/vb6parse/snapshots/parsers/cst/file_operations/write/write_with_object_property.snap
---
source: projects/vb6parse/tests/file_operations/write.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WriteStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WriteKeyword
                  text: Write
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Octothorpe
                      text: "#"
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: MemberAccessExpression
                          children:
                            - kind: Identifier
                              text: obj
                            - kind: PeriodOperator
                              text: "."
                            - kind: NameKeyword
                              text: Name
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: MemberAccessExpression
                          children:
                            - kind: Identifier
                              text: obj
                            - kind: PeriodOperator
                              text: "."
                            - kind: Identifier
                              text: Value
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
